<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/signup_form"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fontFamily="@font/fa_light">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/email"
            android:drawablePadding="10dp"

            android:hint="@string/username"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email1"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/email"
            android:drawablePadding="10dp"

            android:hint="@string/email1"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password1"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/email"
            android:drawablePadding="10dp"

            android:hint="@string/password1"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/email"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:hint="@string/confirmpass"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/signup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/email"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/signup1"
            android:textSize="18dp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>