<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/fa_light"
                android:text="gift"
                android:textColor="@android:color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/fa_light"
                android:text="@string/cost"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/fa_light"
                android:text="@string/description"
                android:textStyle="bold" />
            <Button
                android:id="@+id/receive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recieve" />

        </LinearLayout>

        <android.support.v4.widget.CircleImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="end"
            android:background="@drawable/ic_giftshop"/>
    </LinearLayout>

</android.support.v7.widget.CardView>